# sblex-rs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .taplo.toml  Cargo.toml  Justfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  ci.yml  coverage.yml  nostd.yml  release.yml  safety.yml  scheduled.yml  test.yml
assets/testing/: saldo.txt
crates/fjall-morphology/: Cargo.toml
crates/fjall-morphology/src/: fjall_morph.rs  lib.rs
crates/fjall-morphology/tests/api/: main.rs
crates/fjall-morphology/tests/api/snapshots/: api__lookup__dväljs.snap  api__lookup_with_cont__dv.snap  api__lookup_with_cont__dväljs.snap
crates/fm-server/: Cargo.toml
crates/fm-server/examples/: fm_server_quick_dev.rs
crates/fm-server/src/: cli.rs  config.rs  docs.rs  http.rs  lib.rs  server.rs  startup.rs  state.rs  telemetry.rs
crates/fm-server/src/cli/: options.rs
crates/fm-server/src/config/: tests.rs
crates/fm-server/src/http/: handlers.rs
crates/fm-server/src/http/handlers/: get_morph.rs
crates/fm-server/src/server/: morph.rs
crates/fm-server/tests/api/: conftest.rs  main.rs  morph.rs
crates/fm-server/tests/api/snapshots/: api__morph__can_call_morph.snap  api__morph__can_call_morph_w_cont.snap
crates/morph-builder/: Cargo.toml
crates/morph-builder/src/: main.rs  options.rs
crates/saldo-ws/: Cargo.toml
crates/saldo-ws/src/: config.rs  http.rs  lib.rs
crates/saldo-ws/src/http/: error.rs  extractors.rs  handlers.rs  responses.rs
crates/saldo-ws/src/http/handlers/: fullform_lex.rs  fullforms.rs  lids.rs  system.rs
crates/saldo-ws/templates/: saldo_document.html  saldo_lid_lexeme.html  saldo_lid_lexeme_saknas.html  saldo_table.html
crates/saldo-ws/tests/api/: conftest.rs  lids.rs  system_check.rs
crates/saldo-ws/tests/api/snapshots/: api__lids__test_json_missing_returns_404-qt..1.snap  api__lids__test_json_missing_returns_404-qt..vb.1.snap  api__lids__test_json_valid_input_returns_200-dväljas..1.snap  api__lids__test_json_valid_input_returns_200-dväljas..vb.1.snap  api__system_check__health_check_works.snap  api__system_check__version_works.snap
crates/saldo-ws/tests/saldo_ws_api/: conftest.rs  fullform.rs  fullform_lex.rs  lids.rs  main.rs
crates/saldo-ws/tests/saldo_ws_api/snapshots/: saldo_ws_api__fullform__test_json_valid_input_returns_200-dv.snap  saldo_ws_api__fullform__test_json_valid_input_returns_200-dvä.snap  saldo_ws_api__fullform__test_json_valid_input_returns_200-dväl.snap  saldo_ws_api__fullform__test_json_valid_input_returns_200-dväljs.snap  saldo_ws_api__fullform_lex__test_json_valid_input_returns_200-dväljs.snap  saldo_ws_api__lids__test_invalid_input_returns_422-html.snap  saldo_ws_api__lids__test_json_missing_returns_404-qt..1.snap  saldo_ws_api__lids__test_json_missing_returns_404-qt..vb.1.snap  saldo_ws_api__lids__test_json_valid_input_returns_200-dväljas..1.snap  saldo_ws_api__lids__test_json_valid_input_returns_200-dväljas..vb.1.snap  saldo_ws_api__system_check__health_check_works.snap  saldo_ws_api__system_check__version_works.snap
crates/sblex/: Cargo.toml
crates/sblex-server/: Cargo.toml
crates/sblex-server/examples/: quick_dev.rs
crates/sblex-server/src/: lib.rs  main.rs  startup.rs
crates/sblex-server/src/routes/: mod.rs
crates/sblex-server/tests/api/: conftest.rs  lids.rs  main.rs  system_check.rs
crates/sblex-services/: Cargo.toml
crates/sblex-services/src/: errors.rs  lib.rs  mem.rs  models.rs  morphology.rs  ports.rs  service.rs
crates/sblex-services/src/mem/: mem_lookup.rs
crates/sblex-services/src/models/: fullform.rs  fullform_lex.rs  lemma.rs  lexeme.rs  lookup.rs
crates/sblex-telemetry/: Cargo.toml
crates/sblex-telemetry/src/: telemetry.rs
crates/sblex/src/: trie.rs
crates/sblex/src/fm/: morphology.rs
crates/trie-map/: Cargo.toml
crates/trie-map/src/: lib.rs
crates/trie-map/src/trie/: trie.rs
crates/trie-map/src/trie/trie_builder/: mod.rs
crates/trie-morphology/: Cargo.toml  README.md
crates/trie-morphology/examples/: load_morphology.rs
crates/trie-morphology/src/: error.rs  lib.rs  morphology.rs  trie.rs
crates/trie-morphology/src/fm/: morphology.rs
crates/trie-morphology/tests/: load_morphology_from_file.rs
crates/trie-sketch/: Cargo.toml
crates/trie-sketch/src/: lib.rs
crates/workspace-hack/: Cargo.toml
fm-server/: Cargo.toml  fm-server-py-logs.jsonl
fm-server/src/: main.rs  server.rs  state.rs
fm-server/tests/api/: conftest.rs  morph.rs
sblex/: Cargo.toml
sblex/examples/: load_morphology.rs
sblex/src/: trie.rs
sblex/src/fm/: mod.rs  morphology.rs
sblex/tests/: load_morphology_from_file.rs
server/: Cargo.toml
server/examples/: quick_dev.rs
server/src/: main.rs  startup.rs
server/src/routes/: lids.rs  mod.rs  system.rs
server/tests/api/: lids.rs  main.rs
trie-map/: Cargo.toml
trie-map/src/naive_trie/: mod.rs
trie-map/src/trie/: mod.rs  trie.rs
trie-map/src/trie/trie_builder/: mod.rs
trie-sketch/: Cargo.toml
trie-sketch/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  init_test_db.rs  main.rs
