[package]
name = "sblex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.13.2"
serde_json = { workspace = true }
unicode-segmentation = "1.10.1"

[dev-dependencies]
eyre = { workspace = true }
