[package]
name = "sblex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = { version = "1.1.5", features = ["serde"] }
hashbrown = { version = "0.13.2", features = ["serde"] }
serde_json = { workspace = true }
unicode-segmentation = "1.10.1"
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
eyre = { workspace = true }
