[package]
name = "sblex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = { version = "1.1.5", features = ["serde"] }
hashbrown = { version = "0.13.2", features = ["serde"] }
im = "15.1.0"
serde_json = { workspace = true }
unicode-segmentation = "1.10.1"
serde = { workspace = true, features = ["derive"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
eyre = { workspace = true }
