[package]
name = "sblex-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
axum-tracing-opentelemetry = { version = "0.10.0", features = ["otlp", "tracing_subscriber_ext"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", default-features = false, features = ["signal", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
