[package]
name = "sblex-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
axum-tracing-opentelemetry = { version = "0.10.0", features = ["otlp", "tracing_subscriber_ext"] }
axum-xml = "0.2.0"
mime = "0.3.17"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.94"
tokio = { workspace = true }
tracing = "0.1.37"

[dev-dependencies]
reqwest = { version = "0.11.16", features = ["json"], default-features = false }
anyhow = "1.0.70"
httpc-test = "0.1.1"
rstest = "0.17.0"
