[package]
edition.workspace      = true
name                   = "fjall-morphology"
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
fjall          = "2.5.0"
miette         = "7.4.0"
sblex-services = { workspace = true }

[dev-dependencies]
eyre                 = { workspace = true }
insta.workspace      = true
serde_json.workspace = true
temp-dir             = { workspace = true }
