[package]
name = "fm-server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[[bin]]
name = "fm-server"
path = "src/bin/main.rs"
test = false
doctest = false

[dependencies]
aide.workspace = true
arcstr.workspace = true
async-trait.workspace = true
# axum-extra.workspace = true
# axum-jsonschema.workspace = true
axum-macros.workspace = true
axum-tracing-opentelemetry.workspace = true
axum.workspace = true
clap.workspace = true
config = { workspace = true }
dotenvy = { workspace = true }
eyre.workspace = true
fjall-morphology = { workspace = true }
init-tracing-opentelemetry = { workspace = true, features = ["stdout"] }
opentelemetry_sdk.workspace = true
opentelemetry-otlp = { workspace = true, features = [
    "reqwest-client",
    "reqwest-rustls",
] }
opentelemetry = { workspace = true }
reqwest = { workspace = true }
reqwest_cookie_store = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tower-http = { workspace = true, features = ["trace", "timeout"] }
tracing-opentelemetry-instrumentation-sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# local deps
trie-morphology = { workspace = true }
sblex-telemetry = { workspace = true }
sblex-services = { workspace = true }

# opentelemetry-stdout = { version = "0.3.0", features = [
#     "trace",
#     "logs",
#     "metrics",
# ] }
# opentelemetry-semantic-conventions = "0.14.0"
# opentelemetry-otlp = { version = "0.15.0", features = ["logs", "reqwest-client", "reqwest-rustls"] }


[dev-dependencies]
eyre.workspace = true
reqwest.workspace = true
insta.workspace = true
