[package]
edition                = "2021"
name                   = "fm-server"
rust-version.workspace = true
version                = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[[bin]]
doctest = false
name    = "fm-server"
path    = "src/bin/main.rs"
test    = false

[dependencies]
aide.workspace        = true
arcstr.workspace      = true
async-trait.workspace = true
# axum-extra.workspace = true
# axum-jsonschema.workspace = true
axum.workspace = true
axum-macros.workspace = true
axum-tracing-opentelemetry.workspace = true
clap.workspace = true
config = { workspace = true }
dotenvy = { workspace = true }
eyre.workspace = true
fjall-morphology = { workspace = true }
init-tracing-opentelemetry = { workspace = true, features = ["stdout"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
  "reqwest-client",
  "reqwest-rustls",
] }
opentelemetry_sdk.workspace = true
reqwest = { workspace = true }
reqwest_cookie_store = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tower-http = { workspace = true, features = ["trace", "timeout"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-opentelemetry-instrumentation-sdk = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# local deps
sblex-services  = { workspace = true }
sblex-telemetry = { workspace = true }
trie-morphology = { workspace = true }

# opentelemetry-stdout = { version = "0.3.0", features = [
#     "trace",
#     "logs",
#     "metrics",
# ] }
# opentelemetry-semantic-conventions = "0.14.0"
# opentelemetry-otlp = { version = "0.15.0", features = ["logs", "reqwest-client", "reqwest-rustls"] }


[dev-dependencies]
eyre.workspace    = true
insta.workspace   = true
reqwest.workspace = true
