[package]
name = "morph-builder"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
fjall-morphology = {workspace = true}
miette = { version = "7.4.0", features = ["fancy"] }
sblex-services = { workspace = true }
trie-morphology = {workspace = true}
