[package]
edition.workspace      = true
name                   = "morph-builder"
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
clap             = { workspace = true, features = ["derive"] }
fjall-morphology = { workspace = true }
miette           = { workspace = true, features = ["fancy"] }
sblex-services   = { workspace = true }
trie-morphology  = { workspace = true }
