[package]
name = "saldo-ws"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "saldo-ws"
path = "src/bin/main.rs"

[dependencies]
# local deps
sblex-telemetry.workspace = true

# external deps
axum = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
init-tracing-opentelemetry = { workspace = true, features = [
    "otlp",
    "tracing_subscriber_ext",
] }
mime = { workspace = true }
opentelemetry.workspace = true
reqwest = { workspace = true, features = ["json"] }
reqwest_cookie_store = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time.workspace = true
tokio = { workspace = true }
tracing.workspace = true
sblex-services.workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
reqwest = { workspace = true, features = ["json"] }
rstest = { workspace = true }
