[package]
name = "sblex-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local deps
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# external deps
axum = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
axum-xml = { workspace = true }
init-tracing-opentelemetry = { workspace = true, features = [
    "otlp",
    "tracing_subscriber_ext",
] }
mime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
eyre = { workspace = true }
httpc-test = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rstest = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["workspace-hack"]
