[package]
name = "sblex-server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local deps
sblex-telemetry.workspace = true

# external deps
axum = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }
axum-xml = { workspace = true }
dotenvy = { workspace = true }
eyre = { workspace = true }
init-tracing-opentelemetry = { workspace = true, features = [
    "otlp",
    "tracing_subscriber_ext",
] }
mime = { workspace = true }
opentelemetry.workspace = true
reqwest = { workspace = true, features = ["json"] }
reqwest_cookie_store = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
httpc-test = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rstest = { workspace = true }
