[package]
edition.workspace      = true
name                   = "sblex-services"
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
hashbrown.workspace  = true
miette.workspace     = true
serde                = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror            = "2.0.10"
tracing.workspace    = true
