[package]
edition.workspace      = true
name                   = "sblex-telemetry"
rust-version.workspace = true
version                = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
init-tracing-opentelemetry = { workspace = true, features = [
  "stdout",
  "tracing_subscriber_ext",
] }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-opentelemetry-instrumentation-sdk = { workspace = true }
tracing-subscriber.workspace = true
