[package]
name = "sblex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local deps
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# external deps
arcstr = { workspace = true, features = ["serde"] }
hashbrown = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing.workspace = true
unicode-segmentation = { workspace = true }

[dev-dependencies]
eyre = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["workspace-hack"]
