[package]
name = "trie-morphology"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local deps
sblex-services = { workspace = true }

# external deps
arcstr = { workspace = true, features = ["serde"] }
hashbrown = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing.workspace = true
unicode-segmentation = { workspace = true }

[dev-dependencies]
eyre = { workspace = true }
